iimplementar métodos iniciais para MongoDB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=Project Manager
 server.port=8080
+
+mongodb.username=${MONGODB_USERNAME}
+mongodb.password=${MONGODB_PASSWORD}
+mongodb.cluster_url=${MONGODB_CLUSTER_URL}
+mongodb.database_name=${MONGODB_DATABASE_NAME}
